--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </body>
 
 <script src="./MyVue.js"></script>
+<script src="./Compile.js"></script>
 <script src="./Observer.js"></script>
 <script>
     let vm = new MyVue({
